update:前端UI、工具优化

--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/inc/platform_header.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/inc/platform_header.html
@@ -37,7 +37,7 @@
     }
 
     $(function () {
-        var menus = ${session.sessionMenus!};
+        var menus = JSON.parse('${session.sessionMenus!}');
         $('.sidebar-menu').sidebarMenu({data: menus});
         $("#personalInfo").click(function () {
             addTabs({
