--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/dev/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/dev/index.html
@@ -1,16 +1,3 @@
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<style>
-    .content{
-        width: 70%;
-        margin: 0 auto;
-    }
-</style>
-<section class="content">
-    <div class="box box-warning">
-        <div id="content" style="padding: 15px"></div>
-    </div>
-    <pre id="markdown" style="display: none"><%include("dev.md"){}%></pre>
-</section>
 <script>
-    document.getElementById('content').innerHTML = marked(document.getElementById("markdown").innerHTML);
+    window.location.href = "https://gitee.com/threefish/NutzFw/wikis/pages";
 </script>
