fix:OA模块中请假类型code写错了，多个了s

--- a/nutz-web-oa/src/main/webapp/WEB-INF/view/modules/business/general/leave/view.html
+++ b/nutz-web-oa/src/main/webapp/WEB-INF/view/modules/business/general/leave/view.html
@@ -11,7 +11,7 @@
                     <label class="control-label col-sm-2">
                         请假类型： </label>
                     <div class="col-sm-10">
-                        ${dict("holiday_types",false,"form-control","END",'v-model=formData.leaveType','disabled')}
+                        ${dict("holiday_type",false,"form-control","END",'v-model=formData.leaveType','disabled')}
                     </div>
                 </div>
             </div>
