--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/message/news/edit.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/message/news/edit.html
@@ -63,7 +63,7 @@ layout("/layouts/blank.html",{title:title}){
             <label>
                 <span class="required">*</span>
                 新闻类别</label>
-            ${dict("sys_news_category",false,"","","lable","END",'v-model=fromData.categoryId','class="form-control"',':disabled="!fromDataEdit"','placeholder="请输入..."')}
+            ${dict("sys_news_category",false,"","","id","END",'v-model=fromData.categoryId','class="form-control"',':disabled="!fromDataEdit"','placeholder="请输入..."')}
         </div>
 
         <div class="form-group col-xs-6">
