--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
@@ -22,7 +22,6 @@
           type="image/png">
     <link href="${base!}/static/flowable-modeler/images/favicon-16x16.png?v=Om5N75Y123" rel="icon" sizes="16x16"
           type="image/png">
-    <link href="manifest.json" rel="manifest">
     <link color="#506d75" href="${base!}/static/flowable-modeler/images/safari-pinned-tab.svg?v=Om5N75Y123"
           rel="mask-icon">
     <link href="${base!}/static/flowable-modeler/libs/ui-grid_3.0.0/ui-grid.css" rel="Stylesheet" type="text/css"/>
@@ -58,7 +57,9 @@
 
         function onload() {
             setTimeout(function () {
-                parent.vm.handleUnBlockUI();
+               try {
+                   parent.vm.handleUnBlockUI();
+               }catch (e){}
             }, 1000);
         }
     </script>
@@ -283,6 +284,8 @@
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-expansion-controller.js"
         type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-process-historylevel-controller.js"
+        type="text/javascript"></script>
+<script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-process-externalformexecutor-controller.js"
         type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-ordering-controller.js"
         type="text/javascript"></script>
