--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
@@ -287,6 +287,8 @@
         type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-process-externalformexecutor-controller.js"
         type="text/javascript"></script>
+<script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-process-formselecter-controller.js"
+        type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-ordering-controller.js"
         type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-out-parameters-controller.js"
