--- a/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/styles/common/style.css
+++ b/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/styles/common/style.css
@@ -54,7 +54,7 @@ body pre {
 }
 
 hr {
-	border-top: 1px solid #606b7d; 
+	border-top: 1px solid #606b7d;
 }
 
 .form-wrapper textarea {
@@ -1710,7 +1710,7 @@ h3+div > .dropzone {
     background-color: #e8edf1;
     min-height: 60px;
     border-bottom: 1px solid #a4acb9;
-    padding: 15px 15px;
+    padding: 8px 25px;;
 }
 
 .modal-header .actions {
@@ -3279,4 +3279,3 @@ ul#strength > li:last-child {
 .noHeight {
   height:auto;
 }
-
